started working in js, just uploading files to continue working on PC

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   </head>
   <body>
     <header class="header">
-      <h2 class="main-heading">Your favourite georgaphy class</h2>
+      <h2 class="main-heading">Your favourite geography class</h2>
     </header>
     <section class="section-countries">
       <div class="container">
         <!-- Markup for country -->
-        <div class="country">
+        <!-- <div class="country">
           <div class="country-image-box">
             <img
               class="country-image"
@@ -48,10 +48,10 @@
               <p class="country-neighbour">CAN, MEX</p>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Markup for neighbouring countries -->
-        <div class="neighbour">
+        <!-- <div class="neighbour">
           <div class="neighbour-image-box">
             <img
               class="neighbour-image"
@@ -79,7 +79,7 @@
               <p class="neighbour-neighbour">CAN, MEX</p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
     <script src="script/script.js"></script>
