created an input field by which the country will be rendered all that's left is to render neighbours

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
   <body>
     <header class="header">
       <h2 class="main-heading">Your favourite geography class</h2>
+      <form class="form-country">
+        <label for="input-country" class="label">Search a country</label>
+        <input
+          type="text"
+          name="country"
+          class="input-country"
+          id="input-country"
+          placeholder="Georgia"
+        />
+        <button type="submit" class="btn">Search</button>
+      </form>
     </header>
     <section class="section-countries">
       <div class="container">
